@@ -1,7 +1,7 @@
 //
 // C++ Interface: configgeneralpage
 //
-// Description: 
+// Description:
 //
 //
 // Author: Daniel Faust <hessijames@gmail.com>, (C) 2007
@@ -37,19 +37,17 @@ public:
 private:
     KComboBox *cStartTab;
     KComboBox *cDefaultProfile;
-    QStringList sDefaultProfile;
     KComboBox *cDefaultFormat;
-    QStringList sDefaultFormat;
 //     KComboBox *cPriority;
 //     QStringList sPriority;
     QCheckBox *cUseVFATNames;
     KComboBox *cConflictHandling;
-    QStringList sConflictHandling;
     KIntSpinBox *iNumFiles;
     KIntSpinBox *iUpdateDelay;
     QCheckBox *cCreateActionsMenu;
     QCheckBox *cRemoveFailedFiles;
     KComboBox *cReplayGainGrouping;
+    KComboBox *cPreferredOggVorbisExtension;
 
     Config *config;
 
